Can retrieve weather data

--- a/src/template.html
+++ b/src/template.html
@@ -4,20 +4,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Restaurant Page</title>
+        <title>Weather App</title>
     </head>
 
     <body>
-        <header>
-            <h1>Odin Restuarant</h1>
+        <h1>Weather App</h1><br>
 
-            <nav>
-                <button id="home">Home</button>
-                <button id="menu">Menu</button>
-                <button id="about">About</button>
-            </nav>
-        </header>
+        <input type="text" id="location" placeholder="Enter Location">
+        <button id="searchBtn">Fetch Location's Weather</button><br>
 
-        <div class="content"></div>
+        <p id="temperature">Temp: </p>
+        <p id="description">Description: </p>
+        <p id="humidity">Humidity: </p>
+        <p id="windSpeed">Wind Speed: </p>
     </body> 
 </html>
