Can display temperature and change between Celsius and Fahrenheit

--- a/src/template.html
+++ b/src/template.html
@@ -23,7 +23,17 @@
 
             <div class="information">
                 <div class="temp-display">
-                    <p id="temperature">Temp: </p>
+
+                    <div class="tempMain">
+                        <h1 id="temperature">0</h1>
+                        <p id="tempTypeDisplay">Celsius</p>
+                    </div>
+
+                    <div class="tempBtn">
+                        <button id="tempTypeBtn">Celsius/Fahrenheit</button>
+                    </div>
+
+
                 </div>
 
                 <div class="stats">
